--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.0",
     "firebase": "^9.6.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
+    "react-bootstrap-icons": "^1.7.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.1",
     "react-router": "^6.2.1",
