--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "bootlint": "^1.1.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.0",
     "firebase": "^9.6.5",
+    "jquery": "^3.6.0",
+    "mdb-ui-kit": "^3.10.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-bootstrap-icons": "^1.7.2",
