--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-firebase-hooks": "^5.0.1",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
     "web-vitals": "^2.1.4"
